# phantomx_rst

./: CMakeLists.txt  README.md  package.xml
config/: pincher_arm.yaml  pincher_gripper.yaml
include/phantomx_rst/: kinematics.h  misc.h  phantomx_interface.h  types.h
launch/: arm.launch  arm_moveit.launch
phantomx_control/: CMakeLists.txt  package.xml
phantomx_control/include/phantomx_control/: phantomx_control.h
phantomx_control/src/: camera_test.cpp  main_moveit.cpp  main_simple.cpp  measure_states.cpp
phantomx_lib/: CMakeLists.txt  README.md  package.xml  phantomx_rst.kdev4
phantomx_lib/.kdev4/: phantomx_rst.kdev4
phantomx_lib/config/: pincher_arm.yaml  pincher_arm.yaml~  pincher_gripper.yaml  pincher_gripper.yaml~
phantomx_lib/include/phantomx_lib/: kinematics.h  misc.h  phantomx_interface.h  types.h
phantomx_lib/include/phantomx_rst/: types.h
phantomx_lib/src/: kinematics.cpp  main.cpp  phantomx_interface.cpp
phantomx_rst/: CMakeLists.txt  package.xml
phantomx_rst/config/: phantomx_rviz.rviz  pincher_arm.yaml
phantomx_rst/launch/: arm.launch  arm_rviz.launch  arm_sim.launch  move_group.launch  moveit_gui_all.launch
phantomx_rst/scripts/: print_joint_state.py
src/: kinematics.cpp  main.cpp  phantomx_interface.cpp
turtlebot_arm_moveit_config/: .setup_assistant
turtlebot_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  pincher_arm.srdf
turtlebot_arm_moveit_config/launch/: planning_context.launch  turtlebot_arm_moveit.launch
